--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://use.typekit.net/dmq3uhj.css">
     <title>Three.js Universe Demo</title>
 </head>
 
 <body>
+    <div class="container">
+        <div class="content">
+            <h1>Roberto<br>Lovece</h1>
+            <p>Journey into the next dimension of coding</p>
+        </div> 
+    </div>
     <div id="canvas"></div>
 </body>
 
