Added responsive github button link

--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,13 @@
 
 <body>
     <div class="container">
-        <div class="content">
+        <div class="content" class="noselect">
             <h1>Roberto<br>Lovece</h1>
-            <p>Journey into the next dimension of coding</p>
+            <p class="tag-line" class="noselect">Journey into the next dimension of coding</p>   
         </div> 
+        <div class="bottom">
+            <u class="git"><a href="https://github.com/" >GitHub</u>
+        </div>
     </div>
     <div id="canvas"></div>
 </body>
