--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,12 @@
 
 <body>
     <div class="container">
-        <div class="content" class="noselect">
+        <div class="content">
             <h1>Roberto<br>Lovece</h1>
-            <p class="tag-line" class="noselect">Journey into the next dimension of coding</p>   
+            <p class="tag-line">Journey into the next dimension of coding</p>   
         </div> 
         <div class="bottom">
-            <u class="git"><a href="https://github.com/" >GitHub</u>
+            <u class="git"><a href="https://github.com/RobertoLovece" >GitHub</u>
         </div>
     </div>
     <div id="canvas"></div>
