--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.typekit.net/dmq3uhj.css">
     <title>Three.js Universe Demo</title>
-<script defer src="/Three.js-Universe-Demo/index.bundle.js"></script></head>
+<script defer src="index.bundle.js"></script></head>
 
 <body>
     <div class="container">
