Made text hidden while loading then appear once page is loaded

--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,11 @@
 <body>
     <div class="container">
         <div class="content">
-            <h1>Roberto<br>Lovece</h1>
-            <p class="tag-line">Journey into the next dimension of coding</p>   
+            <h1 hidden>Roberto<br>Lovece</h1>
+            <p class="tag-line" hidden>Journey into the next dimension of coding</p>   
         </div> 
         <div class="bottom">
-            <u class="git"><a href="https://github.com/RobertoLovece" >GitHub</u>
+            <u class="git" hidden><a href="https://github.com/RobertoLovece" >GitHub</u>
         </div>
     </div>
     <div id="canvas"></div>
