--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.typekit.net/dmq3uhj.css">
-    <title>Three.js Universe Demo</title>
-<script defer src="index.bundle.js"></script></head>
+    <title>Universe</title>
+<link rel="icon" href="universe.png"><script defer src="index.bundle.js"></script></head>
 
 <body>
     <div class="container">
